fix: 菜单关闭 showAsAction="always" 无效

--- a/bottomdialog/src/main/res/menu/menu_close_icon.xml
+++ b/bottomdialog/src/main/res/menu/menu_close_icon.xml
@@ -6,5 +6,6 @@
         android:id="@+id/menu_item_close"
         android:icon="@drawable/ic_close"
         android:title="@string/close"
+        android:showAsAction="always"
         app:showAsAction="always" />
 </menu>
