--- a/bottomdialog/src/main/res/layout/dialog_content.xml
+++ b/bottomdialog/src/main/res/layout/dialog_content.xml
@@ -6,37 +6,51 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/trans"
-    android:fitsSystemWindows="false"
     android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/bs_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/color_dialog_bg"
         android:orientation="vertical"
         app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
-        <!--app:behavior_hideable="true"-->
-        <!--app:behavior_peekHeight="350dp"-->
 
-        <FrameLayout
-            android:id="@+id/header_container"
+        <!-- 填充状态栏 -->
+        <View
+            android:id="@+id/statusbar_fill"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="10dp" />
 
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar_lay"
+            android:layout_width="match_parent"
+            android:background="@color/trans"
+            android:elevation="0dp"
+            app:elevation="0dp"
+            android:layout_height="wrap_content">
+
+            <FrameLayout
+                android:id="@+id/header_container"
+                android:background="@color/color_dialog_bg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </android.support.design.widget.AppBarLayout>
 
         <android.support.v4.widget.NestedScrollView
             android:id="@+id/container"
             android:layout_width="match_parent"
+            android:background="@color/color_dialog_bg"
+            android:fillViewport="true"
             android:layout_height="match_parent">
 
             <FrameLayout
                 android:id="@+id/content"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical" />
         </android.support.v4.widget.NestedScrollView>
+
     </LinearLayout>
 
 
