--- a/bottomdialog/src/main/res/layout/dialog_content.xml
+++ b/bottomdialog/src/main/res/layout/dialog_content.xml
@@ -41,13 +41,12 @@
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:background="@color/color_dialog_bg"
-            android:fillViewport="true"
             android:layout_height="match_parent">
 
             <FrameLayout
                 android:id="@+id/content"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical" />
         </android.support.v4.widget.NestedScrollView>
 
