--- a/extension/src/main/res/layout/header_awesome.xml
+++ b/extension/src/main/res/layout/header_awesome.xml
@@ -31,9 +31,8 @@
             android:id="@+id/little_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
+            android:layout_centerInParent="true"
+            android:paddingLeft="16dp"
             android:text="分享到" />
 
         <LinearLayout
