--- a/bottomdialog/src/main/res/layout/header_toolbar.xml
+++ b/bottomdialog/src/main/res/layout/header_toolbar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tool_bar"
     android:layout_width="match_parent"
     android:layout_height="60dp"
