--- a/bottomdialog/src/main/res/layout/header_toolbar.xml
+++ b/bottomdialog/src/main/res/layout/header_toolbar.xml
@@ -3,4 +3,5 @@
     android:id="@+id/tool_bar"
     android:layout_width="match_parent"
     android:layout_height="60dp"
+    android:background="@color/color_dialog_bg"
     android:title="@string/app_name" />
