--- a/bottomdialog/src/main/res/layout/action_buttons.xml
+++ b/bottomdialog/src/main/res/layout/action_buttons.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@color/color_dialog_bg"
     android:layout_height="wrap_content"
+    android:background="@color/color_dialog_bg"
     android:padding="10dp">
 
     <LinearLayout
@@ -20,7 +20,8 @@
             android:padding="10dp"
             android:text="NEUTRAL"
             android:textColor="#222222"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:visibility="gone" />
     </LinearLayout>
 
     <TextView
@@ -33,7 +34,8 @@
         android:padding="10dp"
         android:text="POSITIVE"
         android:textColor="?attr/colorPrimary"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/dialog_button_negative"
@@ -45,6 +47,7 @@
         android:padding="10dp"
         android:text="NEGATIVE"
         android:textColor="#222222"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:visibility="gone" />
 
 </LinearLayout>
