--- a/bottomdialog/src/main/res/values-v21/style.xml
+++ b/bottomdialog/src/main/res/values-v21/style.xml
@@ -15,6 +15,10 @@
         <item name="android:colorAccent">?attr/colorAccent</item>
         <item name="android:colorPrimary">?attr/colorPrimary</item>
         <item name="android:colorPrimaryDark">?attr/colorPrimaryDark</item>
+
+        <item name="bd_bg_color">@color/color_dialog_bg</item>
+        <item name="android:textColorPrimary">#212121</item>
+
     </style>
 
     <style name="BottomDialogActivity" parent="Theme.AppCompat.Light.NoActionBar">
@@ -27,5 +31,8 @@
         <item name="android:windowBackground">@color/trans</item>
         <item name="android:navigationBarColor">?attr/colorPrimary</item>
         <item name="android:fitsSystemWindows">false</item>
+
+        <item name="bd_bg_color">@color/color_dialog_bg</item>
+        <item name="android:textColorPrimary">#212121</item>
     </style>
 </resources>
