--- a/extension/src/main/res/layout/header_awesome.xml
+++ b/extension/src/main/res/layout/header_awesome.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/trans"
@@ -8,16 +9,16 @@
     <LinearLayout
         android:id="@+id/fill_layout"
         android:layout_width="match_parent"
+        android:layout_height="40dp"
         android:background="@color/trans"
-        android:gravity="bottom"
-        android:layout_height="40dp">
+        android:gravity="bottom">
 
         <View
             android:id="@+id/fill_view"
-            android:fitsSystemWindows="true"
             android:layout_width="match_parent"
-            android:background="@color/color_dialog_bg"
-            android:layout_height="0dp" />
+            android:layout_height="0dp"
+            android:background="?attr/bd_bg_color"
+            android:fitsSystemWindows="true" />
 
     </LinearLayout>
 
@@ -25,7 +26,7 @@
         android:id="@+id/hide_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/color_dialog_bg">
+        android:background="?attr/bd_bg_color">
 
         <TextView
             android:id="@+id/little_title"
@@ -33,32 +34,37 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:paddingLeft="16dp"
-            android:text="分享到" />
+            android:paddingRight="16dp"
+            android:textColor="?android:textColorPrimary"
+            tools:text="分享到" />
 
         <LinearLayout
             android:id="@+id/title_lay"
             android:layout_width="match_parent"
-            android:padding="10dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
-            android:visibility="invisible"
             android:gravity="center_vertical"
-            android:layout_height="wrap_content">
+            android:padding="10dp"
+            android:visibility="invisible">
 
             <ImageView
                 android:id="@+id/close_btn"
                 android:layout_width="wrap_content"
-                android:src="@drawable/ic_close"
+                android:layout_height="wrap_content"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:padding="5dp"
-                android:layout_height="wrap_content" />
+                android:src="@drawable/ic_close" />
 
             <TextView
                 android:id="@+id/title"
                 android:layout_width="match_parent"
-                android:text="分享"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
                 android:layout_marginLeft="20dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                android:layout_height="wrap_content" />
+                android:textColor="?android:textColorPrimary"
+                tools:text="分享" />
 
         </LinearLayout>
     </RelativeLayout>
