--- a/app/src/main/res/layout/dialog_markdown_view.xml
+++ b/app/src/main/res/layout/dialog_markdown_view.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<br.tiagohm.markdownview.MarkdownView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<br.tiagohm.markdownview.MarkdownView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/markdown_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/bd_bg_color"
     app:escapeHtml="false">
 
 </br.tiagohm.markdownview.MarkdownView>
