--- a/bottomdialog/src/main/res/layout/action_buttons.xml
+++ b/bottomdialog/src/main/res/layout/action_buttons.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/color_dialog_bg"
+    android:background="?attr/bd_bg_color"
     android:padding="10dp">
 
     <LinearLayout
@@ -18,10 +19,10 @@
             android:gravity="center"
             android:minWidth="60dp"
             android:padding="10dp"
-            android:text="NEUTRAL"
-            android:textColor="#222222"
+            android:textColor="?android:textColorPrimary"
             android:textStyle="bold"
-            android:visibility="gone" />
+            android:visibility="gone"
+            tools:text="NEUTRAL" />
     </LinearLayout>
 
     <TextView
@@ -32,10 +33,10 @@
         android:gravity="center"
         android:minWidth="60dp"
         android:padding="10dp"
-        android:text="POSITIVE"
         android:textColor="?attr/colorPrimary"
         android:textStyle="bold"
-        android:visibility="gone" />
+        android:visibility="gone"
+        tools:text="POSITIVE" />
 
     <TextView
         android:id="@+id/dialog_button_negative"
@@ -45,9 +46,9 @@
         android:gravity="center"
         android:minWidth="60dp"
         android:padding="10dp"
-        android:text="NEGATIVE"
-        android:textColor="#222222"
+        android:textColor="?android:textColorPrimary"
         android:textStyle="bold"
-        android:visibility="gone" />
+        android:visibility="gone"
+        tools:text="NEGATIVE" />
 
 </LinearLayout>
