--- a/bottomdialog/src/main/res/layout/content_message.xml
+++ b/bottomdialog/src/main/res/layout/content_message.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    android:paddingRight="16dp"
+    android:textColor="?android:textColorPrimary">
 
 </TextView>
