--- a/bottomdialog/src/main/res/layout/header_toolbar.xml
+++ b/bottomdialog/src/main/res/layout/header_toolbar.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/tool_bar"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:background="@color/color_dialog_bg"
-    android:title="@string/app_name" />
+    android:background="?attr/bd_bg_color"
+    app:title="@string/app_name"
+    app:titleTextColor="?android:attr/textColorPrimary" />
