--- a/bottomdialog/src/main/res/layout/one_action_button.xml
+++ b/bottomdialog/src/main/res/layout/one_action_button.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/colorPrimary"
@@ -10,8 +11,8 @@
         android:id="@+id/action_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:background="?attr/selectableItemBackground"
-        android:text="ACTION"
-        android:textColor="#fff" />
+        android:gravity="center"
+        android:textColor="#fff"
+        tools:text="ACTION" />
 </LinearLayout>
