--- a/bottomdialog/src/main/res/values/style.xml
+++ b/bottomdialog/src/main/res/values/style.xml
@@ -13,6 +13,7 @@
 
         <item name="bd_bg_color">@color/color_dialog_bg</item>
         <item name="android:textColorPrimary">#212121</item>
+        <item name="bd_nav_color">@android:color/white</item>
     </style>
 
     <style name="BottomDialogActivity" parent="Theme.AppCompat.Light.NoActionBar">
@@ -24,8 +25,6 @@
         <item name="android:windowBackground">@color/trans</item>
         <item name="android:fitsSystemWindows">false</item>
 
-        <item name="bd_bg_color">@color/color_dialog_bg</item>
-        <item name="android:textColorPrimary">#212121</item>
     </style>
 
 
