--- a/bottomdialog/src/main/res/values-v21/style.xml
+++ b/bottomdialog/src/main/res/values-v21/style.xml
@@ -10,13 +10,14 @@
         <item name="android:statusBarColor">@color/trans</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">@color/trans</item>
-        <item name="android:navigationBarColor">?attr/colorPrimary</item>
+        <item name="android:navigationBarColor">@android:color/white</item>
         <item name="android:windowDrawsSystemBarBackgrounds">false</item>
         <item name="android:colorAccent">?attr/colorAccent</item>
         <item name="android:colorPrimary">?attr/colorPrimary</item>
         <item name="android:colorPrimaryDark">?attr/colorPrimaryDark</item>
 
         <item name="bd_bg_color">@color/color_dialog_bg</item>
+        <item name="bd_nav_color">@android:color/white</item>
         <item name="android:textColorPrimary">#212121</item>
 
     </style>
@@ -29,10 +30,8 @@
         <item name="android:windowEnterAnimation">@null</item>
         <item name="android:windowExitAnimation">@null</item>
         <item name="android:windowBackground">@color/trans</item>
-        <item name="android:navigationBarColor">?attr/colorPrimary</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="android:fitsSystemWindows">false</item>
 
-        <item name="bd_bg_color">@color/color_dialog_bg</item>
-        <item name="android:textColorPrimary">#212121</item>
     </style>
 </resources>
