--- a/bottomdialog/src/main/res/drawable/appbar_shadow.xml
+++ b/bottomdialog/src/main/res/drawable/appbar_shadow.xml
@@ -3,6 +3,6 @@
 
     <gradient
         android:angle="90"
-        android:endColor="?attr/bd_bg_color"
+        android:endColor="#32000000"
         android:startColor="#00000000" />
 </shape>
