AwesomeHeader 支持圆角；主题支持自定义圆角 bd_bar_radius

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
     <style name="BottomDialog.Dark" parent="BottomDialog">
         <item name="bd_bg_color">#212121</item>
         <item name="bd_nav_color">?bd_bg_color</item>
+        <item name="bd_bar_radius">20dp</item>
         <item name="android:textColorPrimary">#fff</item>
     </style>
 
