--- a/bottomdialog/src/main/res/values-v21/style.xml
+++ b/bottomdialog/src/main/res/values-v21/style.xml
@@ -18,6 +18,7 @@
 
         <item name="bd_bg_color">@color/color_dialog_bg</item>
         <item name="bd_nav_color">@android:color/white</item>
+        <item name="bd_bar_radius">20dp</item>
         <item name="android:textColorPrimary">#212121</item>
 
     </style>
