--- a/bottomdialog/src/main/res/values/attrs.xml
+++ b/bottomdialog/src/main/res/values/attrs.xml
@@ -5,7 +5,8 @@
     <attr name="bd_bg_color" format="color" />
     //导航栏色
     <attr name="bd_nav_color" format="color" />
-
+    //toolbar圆角
+    <attr name="bd_bar_radius" format="dimension" />
 
     //文字色 android:textColorPrimary
 
