--- a/bottomdialog/src/main/res/layout/content_list.xml
+++ b/bottomdialog/src/main/res/layout/content_list.xml
@@ -6,16 +6,17 @@
 
     <ProgressBar
         android:id="@+id/loading_bar"
-        android:indeterminate="true"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:indeterminate="true" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:overScrollMode="ifContentScrolls">
 
     </androidx.recyclerview.widget.RecyclerView>
 </LinearLayout>
